--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
     <ImageView
         android:layout_width="350px"
         android:layout_height="350px"
-        android:src="@drawable/LogoMaMangè"
+        android:src="@drawable/logo"
         app:layout_constraintVertical_bias=".5"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
