--- a/app/src/main/res/drawable/edit_text_bg.xml
+++ b/app/src/main/res/drawable/edit_text_bg.xml
@@ -3,6 +3,8 @@
 
     <corners android:radius="20dp"/>
 
+    <solid android:color="@android:color/white" />
+
     <stroke android:width="2dp"
         android:color="@color/white"/>
 
