--- a/app/src/main/res/layout/signup_tab_fragment.xml
+++ b/app/src/main/res/layout/signup_tab_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_bg"
-        android:hint="Email"
+        android:hint="@string/email"
         android:minHeight="48dp"
         android:paddingVertical="10dp"
         android:paddingLeft="20dp"
@@ -28,7 +28,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_bg"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:paddingVertical="10dp"
@@ -47,7 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_bg"
-        android:hint="Conferma Password"
+        android:hint="@string/passconf"
         android:minHeight="48dp"
         android:paddingVertical="10dp"
         android:paddingLeft="20dp"
@@ -66,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
-        android:text="Registrati"
+        android:text="@string/registrati"
         android:textColor="@color/salmonOrange"
         android:textSize="16sp"
         android:textStyle="bold"
