Miglioramento delle stringhe in italiano ed in inglese

--- a/app/src/main/res/layout/login_tab_fragment.xml
+++ b/app/src/main/res/layout/login_tab_fragment.xml
@@ -57,7 +57,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
-        android:text="@string/login"
+        android:text="@string/accedi"
         android:textColor="@color/salmonOrange"
         android:textSize="16sp"
         android:textStyle="bold"
