--- a/app/src/main/res/layout/activity_createjoin_group.xml
+++ b/app/src/main/res/layout/activity_createjoin_group.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_bg"
-        android:hint="Username"
+        android:hint="@string/username"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
