--- a/app/src/main/res/layout/activity_createjoin_group.xml
+++ b/app/src/main/res/layout/activity_createjoin_group.xml
@@ -43,8 +43,8 @@
 
     <Button
         android:id="@+id/creaGroupOrder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="294dp"
+        android:layout_height="46dp"
         android:layout_marginTop="52dp"
         android:backgroundTint="@color/white"
         android:text="@string/crea"
