--- a/app/src/main/res/layout/login_tab_fragment.xml
+++ b/app/src/main/res/layout/login_tab_fragment.xml
@@ -46,6 +46,8 @@
         android:text="@string/passdimenticata"
         app:layout_constraintBaseline_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/loginBtn"
+        android:onClick="onClick"
+        android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.845"
         app:layout_constraintStart_toStartOf="parent"
