--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/salmonOrange">
+    android:background="@color/salmonOrange"
+    app:cardCornerRadius="10dp"
+    android:layout_margin="10dp">
 
     <ImageView
         android:id="@+id/img_rest_act"
@@ -16,7 +18,6 @@
         android:layout_marginBottom="20dp"
         android:scaleType="fitXY"
         app:srcCompat="@drawable/ristorante1" />
-
 
 
     <TextView
