--- a/app/src/main/res/layout/single_restaurant.xml
+++ b/app/src/main/res/layout/single_restaurant.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/salmonOrange">
+    android:background="@color/salmonOrange"
+    app:cardCornerRadius="10dp"
+    android:layout_margin="10dp">
 
     <ImageView
         android:id="@+id/img_rest_single"
