--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -5,47 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:background="@color/salmonOrange"
     app:cardCornerRadius="10dp">
 
-    <ImageView
-        android:id="@+id/img_rest_act"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:scaleType="fitXY"
-        app:srcCompat="@drawable/ristorante1" />
-
-
     <TextView
-        android:id="@+id/nome_rest_act"
-        android:layout_width="226dp"
-        android:layout_height="28dp"
+        android:id="@+id/nome_rest_act_cat"
+        android:layout_width="175dp"
+        android:layout_height="41dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="39dp"
-        android:layout_marginEnd="12dp"
-        android:layout_toEndOf="@+id/img_rest_act"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="217dp"
         android:text="Rest"
-        android:textColor="@color/white"
+        android:textColor="@color/salmonOrange"
         android:textSize="20dp" />
 
-    <TextView
-        android:id="@+id/citta_rest_act"
-        android:layout_width="225dp"
-        android:layout_height="26dp"
-        android:layout_below="@+id/nome_rest_act"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="13dp"
-        android:layout_toEndOf="@+id/img_rest_act"
-        android:text="Citta"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_categorie"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/nome_rest_act_cat"
+        android:layout_marginTop="25dp" />
 
 </RelativeLayout>
