--- a/app/src/main/res/layout/single_plate.xml
+++ b/app/src/main/res/layout/single_plate.xml
@@ -11,18 +11,36 @@
 
     <TextView
         android:id="@+id/plate"
-        android:layout_width="341dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
+        android:layout_width="241dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="66dp"
         android:layout_marginBottom="5dp"
         android:text="Piatto"
-        android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="35dp" />
+        android:textSize="20dp" />
+
+    <ImageView
+        android:id="@+id/imgplate"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:scaleType="fitXY"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <Button
+        android:id="@+id/world"
+        app:icon="@drawable/"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp" />
 
 
 </RelativeLayout>
