--- a/app/src/main/res/layout/single_plate.xml
+++ b/app/src/main/res/layout/single_plate.xml
@@ -11,13 +11,15 @@
 
     <TextView
         android:id="@+id/plate"
-        android:layout_width="241dp"
+        android:layout_width="277dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="21dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="66dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="5dp"
+        android:layout_toEndOf="@+id/imgplate"
         android:text="Piatto"
         android:textColor="@color/white"
         android:textSize="20dp" />
@@ -32,14 +34,16 @@
         android:scaleType="fitXY"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <Button
-        android:id="@+id/world"
+    <ImageButton
+        android:id="@+id/imageButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginStart="340dp"
+        android:layout_marginEnd="4dp"
+        android:backgroundTint="@color/salmonOrange"
+        app:srcCompat="@drawable/ic_baseline_public_24" />
 
 
 </RelativeLayout>
