--- a/app/src/main/res/layout/single_plate.xml
+++ b/app/src/main/res/layout/single_plate.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="120dp"
     android:layout_margin="10dp"
     android:background="@drawable/categories_bkgrnd"
     android:textAlignment="center"
@@ -44,6 +44,25 @@
         android:layout_marginEnd="4dp"
         android:backgroundTint="@color/salmonOrange"
         app:srcCompat="@drawable/ic_baseline_public_24" />
+
+    <TextView
+        android:id="@+id/addToCartButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="206dp"
+        android:layout_marginTop="75dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button_bg"
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        android:text="@string/aggiungi"
+        android:textColor="@color/salmonOrange"
+        android:textSize="11sp"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
